[gd_scene load_steps=3 format=3 uid="uid://drje3pwgnmqi0"]

[ext_resource type="Script" path="res://script/items/item_entity.gd" id="1_bd8x0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gume7"]
bg_color = Color(0.254902, 0.341176, 0.980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.980392, 0.901961, 0.313726, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="ItemEntity" type="TextureButton"]
custom_minimum_size = Vector2(50, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
action_mode = 0
button_mask = 2
stretch_mode = 0
script = ExtResource("1_bd8x0")
item_name = "Рукавицы огра"
price = 150

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = -10.0
offset_bottom = -8.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gume7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="SellButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -64.0
offset_top = -32.0
offset_right = 64.0
text = "Продать"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="SellButton" to="." method="_on_sell_button_pressed"]
